prevent overlap

--- a/app/src/frontend/map/parcel-switcher.css
+++ b/app/src/frontend/map/parcel-switcher.css
@@ -9,7 +9,7 @@
 .parcel-switcher {
     z-index: 1000;
     position: absolute;
-    top: 117px;
+    top: 157px;
     right: 10px;
     float: right;
     background: white;
